--- a/src/pages/Tab4.css
+++ b/src/pages/Tab4.css
@@ -1,97 +1,14 @@
-.main_bg_img {
-  background-image: url(../assets/images/tab-4\ image/pregnency.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  object-fit: cover;
+.edit-part {
+  margin-bottom: 78px;
+}
+
+.signout {
+  padding: 15px;
+  margin-top: 1rem;
   width: 100%;
-  height: 30vh;
-  position: relative;
-  background-position: center;
-}
-
-.cancel_icon {
-  font-size: 30px;
-  position: absolute;
-  right: 30px;
-  top: 20px;
-}
-
-.tab-4_main {
-  padding: 20px;
-}
-
-.hedding_img {
-  width: 40px;
-  height: 40px;
-}
-
-ul.numbered-list {
-  counter-reset: li;
-  list-style-type: none;
-  font-size: 14px;
-  line-height: 18px;
-  padding-left: 10px;
-}
-
-ul.numbered-list li {
-  position: relative;
-  padding: 0 0 5px 35px;
-}
-
-ul.numbered-list li:before {
-  content: counter(li);
-  counter-increment: li;
-  /* height: 23px;
-  width: 23px; */
-  padding: 3px 7px;
-  background-color: #8870e6;
-  /* border: 1px solid blue; */
-  border-radius: 50%;
-  color: white;
-  font-size: medium;
-  font-weight: bold;
-  text-align: center;
-  position: absolute;
-  left: 0;
-  top: 4px;
-}
-
-.read-more-state {
-  display: none;
-}
-
-.read-more-target {
-  opacity: 0;
-  max-height: 0;
-  font-size: 0;
-  transition: .25s ease;
-}
-
-.read-more-state:checked~.read-more-wrap .read-more-target {
-  opacity: 1;
-  font-size: inherit;
-  max-height: 999em;
-}
-
-.read-more-state~.read-more-trigger:before {
-  content: 'Read more...';
-  color: #1EA1F1;
-  font-weight: 500;
-}
-
-.read-more-state:checked~.read-more-trigger:before {
-  content: 'Read less...';
-  color: #1EA1F1;
-  font-weight: 500;
-}
-
-.read-more-trigger {
-  cursor: pointer;
-  display: inline-block;
-  padding: 0 .5em;
-  /* color: #666; */
-  /* font-size: .9em; */
-  line-height: 2;
-  /* border: 1px solid #ddd; */
-  /* border-radius: .25em; */
+  border-radius: 50px;
+  background-color: #8870E6;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 00;
 }
