--- a/src/pages/Tab4.css
+++ b/src/pages/Tab4.css
@@ -1,3 +1,11 @@
+.profile-img {
+  background-size: cover;
+  overflow: hidden;
+  background-position: center;
+  height: 100px !important;
+  width: 100px !important;
+}
+
 .edit-part {
   margin-bottom: 78px;
 }
@@ -7,7 +15,7 @@
   margin-top: 1rem;
   width: 100%;
   border-radius: 50px;
-  background-color: #8870E6;
+  background-color: #FF8686;
   color: #fff;
   font-size: 18px;
   font-weight: 00;
