--- a/src/pages/Tab2.css
+++ b/src/pages/Tab2.css
@@ -1,20 +1,25 @@
-.tab-2_main{
-padding: 20px;
+.header {
+    background: #FF8686;
 }
 
-.img-card{
-display: flex !important;
-justify-content: center !important;
-align-items: center !important;
+.tab-2_main {
+    padding: 20px;
 }
-.card-img{
+
+.img-card {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.card-img {
     width: 200px;
     height: 250px;
 }
 
 @media only screen and (max-width: 460px) {
-    .card-img{
+    .card-img {
         width: 160px !important;
         height: 210px !important;
     }
-  }
+}
