--- a/src/pages/Tab4.css
+++ b/src/pages/Tab4.css
@@ -20,3 +20,20 @@
   font-size: 18px;
   font-weight: 00;
 }
+
+input {
+  outline: 0;
+}
+
+select:focus-visible {
+  outline: 0;
+}
+
+select .options {
+  outline: 0;
+}
+
+select .options:focus-visible {
+  background-color: #FF8686;
+  color: #fff;
+}
