--- a/src/pages/Tab5.css
+++ b/src/pages/Tab5.css
@@ -1,4 +1,4 @@
-.card_image {
+/* .card_image {
   width: 110px;
   height: 110px;
   padding: 10px;
@@ -16,4 +16,34 @@
   .crd2_hedding {
     font-size: 16px !important;
   }
+} */
+
+h5 {
+  color: #FF8686;
+}
+
+.setting-content {
+  padding: 7px 12px;
+  border-radius: 50px;
+  border: 1px solid rgba(255, 134, 134, 0.2);
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
+}
+
+.setting-content:hover {
+  background-color: #FF8686;
+  color: #ffffff;
+}
+
+input {
+  border: none;
+  background-color: transparent;
+  width: 40%;
+}
+
+input::placeholder {
+  color: #e9e8e8;
 }
