--- a/src/pages/Tab5.css
+++ b/src/pages/Tab5.css
@@ -47,3 +47,29 @@ input {
 input::placeholder {
   color: #e9e8e8;
 }
+
+select:focus-visible {
+  outline: 0;
+}
+
+select {
+  width: 50%;
+  background-color: transparent;
+  background-image: none !important;
+}
+
+select option {
+  outline: none;
+  border: none;
+  background-color: #FF8686;
+}
+
+select option:hover {
+  background-color: #FF8686 !important;
+  outline: 0;
+}
+
+select option:focus-visible {
+  background-color: #FF8686;
+  color: #fff;
+}
