--- a/src/pages/Tab5.css
+++ b/src/pages/Tab5.css
@@ -20,6 +20,12 @@
 
 h5 {
   color: #FF8686;
+  font-weight: 600 !important;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .setting-content {
@@ -35,41 +41,44 @@ h5 {
 
 .setting-content:hover {
   background-color: #FF8686;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 
 input {
   border: none;
   background-color: transparent;
   width: 40%;
+  color: #5f5f5f !important;
 }
 
 input::placeholder {
   color: #e9e8e8;
 }
 
-select:focus-visible {
+.setting-content select:focus-visible {
   outline: 0;
 }
 
-select {
+.setting-content select {
   width: 50%;
   background-color: transparent;
   background-image: none !important;
+  -webkit-appearance: none;
+  text-align: end;
+  padding-right: 10px;
+  color: #5f5f5f !important;
 }
 
-select option {
+.setting-content select option {
   outline: none;
   border: none;
   background-color: #FF8686;
+  color: #ffffff;
 }
 
-select option:hover {
-  background-color: #FF8686 !important;
-  outline: 0;
-}
-
-select option:focus-visible {
-  background-color: #FF8686;
-  color: #fff;
+ion-toggle {
+  height: 25px;
+  width: 40px;
+  --handle-height: calc(25px - (2px * 2));
+  --handle-width: calc(25px - (2px * 2));
 }
