--- a/src/pages/Me/me.css
+++ b/src/pages/Me/me.css
@@ -1,3 +1,32 @@
 .header {
-    background: #FF8686;
+  background: #ff8686;
+}
+.center {
+  margin: 110px;
+  width: 100%;
+  height: 2rem;
+  margin-top: 10px;
+}
+input.ridge {
+  border-style: ridge;
+  background-color: pink;
+  margin-bottom: 10px;
+}
+select.ridge {
+  border-style: ridge;
+  background-color: pink;
+  width: 40%;
+  margin-bottom: 10px;
+}
+div.ex1 {
+  background-color: lightblue;
+  width: 100%;
+  overflow-x: scroll;
+  display: flex;
+  gap: 30px;
+}
+.utsav-main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
